modify index page and add style

--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Hi</title>
+        <meta charset="UTF-8">
+     
+        <link rel="stylesheet" href="style1.css">
+        <title>Search</title>
+       
     </head>
     <body>
-        <h1>Welecome to my home page</h1>
+        <div id="wrapper">
+            <div id="header">
+               <ul>
+                   <li style="width: 80px;"><button>Sign in</button></li>
+                   <li></li>
+                   <li>Image</li>
+                   <li>Gmail</li>
+               </ul>
+            </div>
+            <div id="content">
+                <center>
+                <img src="img/google.png">
+                <br><br>
+                <input type="text" class="textBox">
+                <br><br>
+                <button class="srch">Google Search</button>
+                <button class="srch">I'm Feeling Lucky</button>
+                </center>
+            </div>
+
+            <div id="footer">
+                <a href="#" class="bleft">Adverstising</a>
+                <a href="#" class="bleft">Business</a>
+                <a href="#" class="bleft">About</a>
+
+                <a href="#" class="bright">Settings</a>
+                <a href="#" class="bright">terms</a>
+                <a href="#" class="bright">Privacy</a>
+            </div>
+        </div>
     </body>
 </html>
